fixed navigation position on mobile

--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -3,7 +3,7 @@
   color: $light-gray;
   background-color: $dark-blue;
   text-align: center;
-  transition: top 1s;
+  transition: transform 1s;
 }
 
 .navigation--item {
